# warrior-engine

./: .gitignore  CLAUDE.md  CMakeLists.txt  ENGINE_STATE.md  GDD.md  SYSTEMS_REGISTRY.md  engine_config.json
assets/maps/: test.json
core/: atlas.cpp  atlas.hpp  audio.cpp  audio.hpp  audio_impl.cpp  camera.hpp  components.hpp  debug_ui.cpp  debug_ui.hpp  file_watcher.cpp  file_watcher.hpp  game_scene.hpp  input.hpp  lua_vm.cpp  lua_vm.hpp  main.cpp  network.cpp  network.hpp  placement_grid.hpp  renderer.cpp  renderer.hpp  save_load.hpp  stb_impl.cpp  tilemap.cpp  tilemap.hpp
scripts/: main.lua
systems/: camera_system.hpp  combat_system.hpp  conveyor_system.hpp  drill_system.hpp  enemy_system.hpp  item_system.hpp  machine_system.hpp  placement_system.hpp  player_system.hpp  wave_system.hpp
tools/: build_atlas.py  gen_sprite.py  gen_test_sounds.py  gen_test_sprites.py
